Fix button on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,7 +2,6 @@
 @media (max-width: 1023px) {
     .btn {
         padding: 16px 16px;
-        border-radius: none;
     }
 
     #nav .subnav a {
